text clipping to animated image, media queries need fixing

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -74,39 +74,34 @@ h5 {
 // LANDING PAGE SPLASH/HERO
 
 .SplashContainer {
+  // height: 90vh;
+  // max-width: fit-content;
+  width: 100%;
   height: 90vh;
-  max-width: fit-content;
   display: grid;
   justify-content: center;
   align-items: center;
   position: relative;
   overflow: hidden;
-  h1 {
-    display: block;
-    text-align: center;
-    mix-blend-mode: exclusion;
-  }
-}
+  background-color: $black;
+  object-fit: cover;
 
-.SplashContainer::before {
-  //    ALT
-  //   background-image: url("../public/assets/Bases-Purple.png");
-  //   background-position: -100% 55%;
-  //   background-size: 115%;
-  //insert alt from here
-  content: "";
-  position: absolute;
-  mix-blend-mode: lighten;
-  height: 200vh;
-  width: 200vw;
-  background-image: url("../public/assets/fullImageWGrain.webp");
-  background-position: 20% 65%;
-  background-size: 60%;
-  background-repeat: no-repeat;
-  //insert alt to here
-  z-index: -1;
-  animation: orbit 20s infinite linear;
-  transform-origin: 73vw 93vh;
+  h1 {
+    font-size: 6rem;
+    color: #fff;
+    text-align: center;
+    display: inline-block;
+  }
+
+  .textImage {
+    position: absolute;
+    width: 120%;
+    height: 90%;
+    top: -10%;
+    left: -10%;
+    mix-blend-mode: darken;
+    animation: orbit 15s infinite linear;
+  }
 }
 
 @keyframes orbit {
@@ -120,14 +115,13 @@ h5 {
 
 //mobile media query
 
-@media screen and (max-width: 830px) {
-  .SplashContainer {
-    h1 {
-      font-size: 4.5rem;
-      overflow: hidden;
-    }
-  }
-}
+// @media screen and (max-width: 830px) {
+//   .SplashContainer {
+//     h1 {
+//       font-size: 6rem;
+//     }
+//   }
+// }
 
 // NAVIGATION
 nav {
@@ -135,8 +129,9 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding-inline: 1rem;
-  margin-top: 0.5rem;
+  padding-top: 0.5rem;
   height: 8vh;
+  background-color: $black;
   .logo {
     max-width: 10rem;
     height: auto;
@@ -246,6 +241,7 @@ footer {
 section {
   // border-top: $border;
   padding-bottom: 2rem;
+  background-color: $black;
 }
 
 // BOXES
@@ -368,6 +364,11 @@ section {
 // HEADLINERS
 .headliners {
   padding-inline: 2rem;
+
+  h2 {
+    margin-top: 0;
+    padding-top: 0.5rem;
+  }
 }
 
 .headliners-container {
@@ -730,6 +731,22 @@ select {
     }
     .lineup-list {
       padding-bottom: 3rem;
+    }
+
+    .SplashContainer {
+      h1 {
+        font-size: 11rem;
+      }
+
+      .textImage {
+        position: absolute;
+        width: 170%;
+        height: 190%;
+        top: -45%;
+        left: -35%;
+        mix-blend-mode: darken;
+        animation: orbit 8s infinite linear;
+      }
     }
   }
 }
